--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
-APP_NAME=Shop
+APP_NAME=Organizations
 APP_ENV=local
 APP_KEY=base64:JoHfdUVZU4ulDL1J8PYqaxXXOgn6qHO3kx4rLvRT76c=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:81
 
 APP_LOCALE=ru
 APP_FALLBACK_LOCALE=ru
